--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Paper read summary for MapReduce by hgm900611</title>
+    <title>Paper read summary for MapReduce by xuhappy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -24,12 +24,12 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/hgm900611/paper_1" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/xuhappy/paper_1" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/hgm900611/paper_1/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/hgm900611/paper_1/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/xuhappy/paper_1/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/xuhappy/paper_1/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -47,23 +47,28 @@
 <li><strong>Data locality issue</strong></li>
 <li><strong>Speculative Execution</strong></li>
 </ul>
+
 <p>For each issue I will make two categories which are theoretical analysis based optimization and heuristic based algorithm  design. Hope you can get something useful from this summary.</p>
 </blockquote>
 
-<hr><h2>
-<a name="job-scheduling" class="anchor" href="#job-scheduling"><span class="octicon octicon-link"></span></a>Job Scheduling</h2>
+<hr>
+
+<h2>
+<a id="job-scheduling" class="anchor" href="#job-scheduling" aria-hidden="true"><span class="octicon octicon-link"></span></a>Job Scheduling</h2>
 
 <h3>
-<a name="theoretical-analysis-based" class="anchor" href="#theoretical-analysis-based"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
+<a id="theoretical-analysis-based" class="anchor" href="#theoretical-analysis-based" aria-hidden="true"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
 <ul>
 <li>
-<p><a href="http://dl.acm.org/citation.cfm?id=1989493.1989540">B. Moseley, A. Dasgupta, R. Kumar, and T. Sarlos, “On scheduling in
-map-reduce and flow-shops,” in SPAA 2011.</a> This paper seeks to minimize the <em>flowtime</em> of jobs in MapReduce which is motivated from the two-stage flow shop problem. The tasks to machine mapping is unknown and needs to be determined such that the total <em>flowtime</em> is minimized. It gives the offline and online algorithm in both homogeneous and heterogenous environment. The analysis here is nontrivial and gives us a flavor how traditional SRPT algorithm can apply to the scheduling in MapReduce System. </p>
+<a href="http://dl.acm.org/citation.cfm?id=1989493.1989540">B. Moseley, A. Dasgupta, R. Kumar, and T. Sarlos, “On scheduling in
+map-reduce and flow-shops,” in SPAA 2011.</a> This paper seeks to minimize the <em>flowtime</em> of jobs in MapReduce which is motivated from the two-stage flow shop problem. The tasks to machine mapping is unknown and needs to be determined such that the total <em>flowtime</em> is minimized. It gives the offline and online algorithm in both homogeneous and heterogenous environment. The analysis here is nontrivial and gives us a flavor how traditional SRPT algorithm can apply to the scheduling in MapReduce System. </li>
+</ul>
 
 <pre><code>In our following research, we can consider to optimize the job scheduling in a heterogeneous environment where the machines are not identical.
 </code></pre>
-</li>
+
+<ul>
 <li><p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5935152&amp;tag=1">Hyunseok Chang, Murali Kodialam, Ramana Rao Kompella, T. V. Lakshman, Myungjin Lee, Sarit Mukherjee, "Scheduling in MapReduce-like Systems for Fast completion time," in Infocom 2011.</a> This paper seeks to optimize the total completion time of job running in the Mapreduce system. It decides the scheduling order of tasks on each processor. Moreover, this paper doesn't consider the dependency between map task and reduce tasks. A linear program is formulated to relax the original problem. It then outlines a combinatorial approach to solve the LP problem.</p></li>
 <li><p><a href="http://www.cse.psu.edu/%7Efachen/pubs/infocom12mr.pdf">F. Chen, M. Kodialam, and T. Lakshman, “Joint scheduling of processing
 and shuffle phases in MapReduce systems,” in Infocom 2012.</a> 
@@ -71,26 +76,32 @@ Actually this paper is the follow-up work of the above paper. To be more practic
 <li><p><a href="http://dl.acm.org/citation.cfm?id=2254761">Jian Tan, Xiaoqiao Meng, Li Zhang, “Delay Tails in MapReduce Scheduling,” in SIGMETRICS 2012.</a> This paper focuses on the the starvation issue of small jobs under fair scheduler in MapReduce. The root reason of this problem is caused by launching the reduce tasks so early. To efficiently solve this issue and improve the job response performance, it presents a couple scheduler which assign the reduce tasks based on the progress of the map phase. The theoretical analysis here is very complicated. </p></li>
 <li><p><a href="http://newslab.ece.ohio-state.edu/research/resources/Analysis.pdf">Yousi Zheng, Ness Shroff, Prasun Sinha, “A New Analytical Technique for Designing Provably Efficient MapReduce Schedulers,” in Infocom 2013</a>. This paper is the first work to write down the formulation of mapreduce job scheduling including both map and reduce phases. There is no distinguish between map and reduce slots here. It uses adopts the knowledge in probability to prove that any work-conserving scheduler can achieves a constant efficiency ratio (not competitive ratio). Moreover, this paper presents the ASRPT algorithm which is inspired from the famous SRPT (Shortest remaining time first) algorithm and bound the competitive ratio to be 2.</p></li>
 <li><p><a href="http://users.cms.caltech.edu/%7Eadamw/papers/preprint_mapreduce.pdf">M. Lin, L. Zhang, A. Wierman and J. Tan, "Joint optimization of overlapping phases in MapReduce," in IFIP 2013.</a>. This is the first work to consider the overlapping of map phase and shuffle phase so far. A nice formulation is also written down here. Hover, even the offline case with batch arrival is shown to be NP-Complete. It then presents the MaxSRPT ans SpiltSRPT algorithm which are complementary to solve schedule the jobs.</p></li>
-</ul><h3>
-<a name="heuristic-based" class="anchor" href="#heuristic-based"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
+</ul>
+
+<h3>
+<a id="heuristic-based" class="anchor" href="#heuristic-based" aria-hidden="true"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <blockquote>
 <p>I haven't read any papers which present heuristic-based algorithm to optimize the job completion time in MapReduce system. </p>
 </blockquote>
 
-<hr><h2>
-<a name="data-locality" class="anchor" href="#data-locality"><span class="octicon octicon-link"></span></a>Data locality</h2>
+<hr>
+
+<h2>
+<a id="data-locality" class="anchor" href="#data-locality" aria-hidden="true"><span class="octicon octicon-link"></span></a>Data locality</h2>
 
 <h3>
-<a name="theoretical-analysis-based-1" class="anchor" href="#theoretical-analysis-based-1"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
+<a id="theoretical-analysis-based-1" class="anchor" href="#theoretical-analysis-based-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
 <ul>
 <li><p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6284711&amp;tag=1">Qiaomin Xie, Yi Lu, “Degree-guided map-reduce task assignment with
 data locality constraint,” in ISIT 2012.</a> This paper presents the peeling algorithm and adopts the mean-field equations to analyze the evolution (I cannot understand it well). However, it makes an impractical assumption which is that all the tasks with data locality on the machine can be finished in a time slot with probability <em>p</em> while the tasks without data locality can only be finished with probability <em>q</em> and <strong>p &gt; q</strong>. Also the theoretical here is very complex. </p></li>
 <li><p><a href="http://inlab.lab.asu.edu/Publications/WanZhuYin_13.pdf">W. Wang, K. Zhu, L. Ying, J. Tan, L. Zhang, "Map Task Scheduling in MapReduce with Data Locality: Throughput and Heavy-Traffic Optimality," in Infocom 2013.</a>. This paper makes the same assumption as the above paper presented in ISIT 2012. Its task scheduling algorithm includes two aspects which are<code>Routing</code> and <code>Scheduling</code>. The purpose of routing is to keep load balancing for all the machines. Also scheduling process makes a very simple decision based on the length of queues. It adopts the Lyapunov function to prove the stability of the algorithm. The analysis here is also nontrivial. </p></li>
 <li><p><a href="https://www.google.com.hk/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=2&amp;cad=rja&amp;ved=0CDIQFjAB&amp;url=http%3A%2F%2Fresearcher.watson.ibm.com%2Fresearcher%2Ffiles%2Fus-tanji%2FreducePlace2013.pdf&amp;ei=Uh4rUq5mrMGJB-j5gNAJ&amp;usg=AFQjCNEGqVhyg8P3Vj5uOxx7QUrrei4ZQg">J. Tan, X. Meng, L. Zhang, "Improving ReduceTask Data Locality for Sequential MapReduce Jobs," in Infocom 2013.</a> This is the first paper to analyze the data locality issue for reduce tasks with theoretical analysis. Actually, the model here is quite simple, the objective is only to minimize the data transfer cost in shuffle phase with proper reduce task placement. The data transfer cost gives a very good angle for analyzing data locality issue.  </p></li>
-</ul><h3>
-<a name="heuristic-based-1" class="anchor" href="#heuristic-based-1"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
+</ul>
+
+<h3>
+<a id="heuristic-based-1" class="anchor" href="#heuristic-based-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
 <li><p><a href="http://www.sigops.org/sosp/sosp09/papers/isard-sosp09.pdf">Michael Isard, Vijayan Prabhakaran, Jon Currey, Udi Wieder, Kunal Talwar and Andrew Goldberg, "Quincy: Fair Scheduling for Distributed Computing Clusters," in SOSP 2009.</a> This is the first paper to address the data locality issue and fairness problem in MapReduce-like systems. It encodes the scheduling as a flow network. In this network, the edge weights encode the demands of data locality and fairness. This is a very novel and beautiful work. </p></li>
@@ -101,17 +112,23 @@ This paper mainly includes 3 pieces of work and for each work a heuristic-based 
 2) Waiting scheduling for reduce task. The main idea behind this algorithm is to assign a reduce task to an available slot who is close to the 'centrality' of the already generated intermediate date produced by the map phase. 
 3) Random peaking algorithm to assign the map task. This algorithm is motivated from the famous 'delay scheduling' algorithm may cause a bad resource utilization level. 
 Actually, the heuristic algorithm for assigning map tasks is very complex to implement and doesn't make a clear intuition.  However, the bad resource utilization for 'Delay Scheduling' is a very good observation.</p></li>
-</ul><hr><h2>
-<a name="speculative-execution" class="anchor" href="#speculative-execution"><span class="octicon octicon-link"></span></a>Speculative execution</h2>
+</ul>
+
+<hr>
+
+<h2>
+<a id="speculative-execution" class="anchor" href="#speculative-execution" aria-hidden="true"><span class="octicon octicon-link"></span></a>Speculative execution</h2>
 
 <h3>
-<a name="theoretical-analysis-based-2" class="anchor" href="#theoretical-analysis-based-2"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
+<a id="theoretical-analysis-based-2" class="anchor" href="#theoretical-analysis-based-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
 <ul>
 <li>
 <a href="http://personal.ie.cuhk.edu.hk/%7Exh112/research/forum.pdf">Huanle Xu, Wing Cheong Lau, "Resource optimization for speculative execution in a MapReduce Cluster, in ICNP PhD Forum 2013.</a>. This paper is the first work to address the backup strategy with theoretical analysis in MapReduce System. </li>
-</ul><h3>
-<a name="heuristic-based-2" class="anchor" href="#heuristic-based-2"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
+</ul>
+
+<h3>
+<a id="heuristic-based-2" class="anchor" href="#heuristic-based-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
 <li><p><a href="http://research.google.com/archive/mapreduce-osdi04.pdf">J. Dean and S. Ghemawat, “MapReduce: Simplified Data Processing on
@@ -125,15 +142,17 @@ Saha, E. Harris, “Reining in the Outliers in MapReduce Clusters using
 Mantri,” in USENIX OSDI, Oct 2010.</a>
 This paper talks about the backup stategy of Mantri which is a large data processing system in Microsoft  It estimates for each task the remaining time to finish, <code>t_rem</code>, and predicts the duration of a new copy of the task, <code>t_new</code>. Once a slot is idle, Mantri then makes a decision whether to do backup or not based on the statistics of <code>t_rem</code> and <code>t_new</code>. More precisely, a duplicate is scheduled if <code>P(t_rem &gt; 2  t_new) &gt; δ</code> is satisfied. By default, <code>δ = .25</code>. Hence, Mantri schedules a duplicate only if the total resource consumption decreases. Moreover Mantri allows killing a task if it really takes a long time to complete the remaining work.</p></li>
 <li><p><a href="http://www.computer.org/csdl/trans/tc/preprint/06419699-abs.html">Qi Chen, Chen Liu, Zhen Xiao, "Improving MapReduce Performance Using Smart Speculative Execution Strategy," in transactions of Computer Networks 2013.</a> This paper proposes a Smart Speculative Execution algorithm. The main contributions it makes are twofold: i) Use exponentially weighted moving average to predict process speed and compute a task’s remaining time; ii) Determine which task to backup based on the load of a cluster using a cost-benefit model.</p></li>
-</ul><h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+</ul>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <blockquote>
 <p>Having any problems with this summary, please feel free to contact <a href="http://personal.ie.cuhk.edu.hk/%7Exh112">me</a> with the email xh112[@]ie.cuhk.edu.hk. You all are welcome to show your different opinions. </p>
 </blockquote>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/hgm900611">hgm900611</a></p>
+        <p>Project maintained by <a href="https://github.com/xuhappy">xuhappy</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
